--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
+    android:orientation="vertical"
+    android:padding="20dp"
+    android:gravity="center_horizontal"
+    tools:context=".MainActivity2">
     <EditText
         android:id="@+id/edit_main_name"
         android:layout_width="match_parent"
@@ -21,9 +21,8 @@
         android:textSize="20sp"
         />
     <Button
-        android:id="@+id/btn_main_here"
+        android:id="@+id/btn_here2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="여기를 클릭"
-        />
+        android:text="여기를 클릭"/>
 </LinearLayout>
